--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.hankcs</groupId>
+			<artifactId>hanlp</artifactId>
+			<version>portable-1.3.4</version>
+		</dependency>
+
+		<dependency>
 	      <groupId>junit</groupId>
 	      <artifactId>junit</artifactId>
 	      <version>3.8.1</version>
